--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     ],
     "require": {
         "php": ">=5.5.9",
-        "symfony/symfony": "3.0.*",
+        "symfony/symfony": "^3.0",
         "doctrine/orm": "^2.5",
         "doctrine/doctrine-bundle": "^1.6",
         "doctrine/doctrine-cache-bundle": "^1.2",
@@ -25,10 +25,10 @@
         "symfony/monolog-bundle": "^2.8",
         "sensio/distribution-bundle": "^5.0",
         "sensio/framework-extra-bundle": "^3.0.2",
-        "knplabs/knp-paginator-bundle": "~2.5@dev",
-        "knplabs/knp-menu-bundle": "~2.1@dev",
-        "friendsofsymfony/user-bundle": "~2.0@dev",
-        "friendsofsymfony/jsrouting-bundle": "~2.0@dev"
+        "knplabs/knp-paginator-bundle": "^2.5@dev",
+        "knplabs/knp-menu-bundle": "^2.1@dev",
+        "friendsofsymfony/user-bundle": "^2.0@dev",
+        "friendsofsymfony/jsrouting-bundle": "^2.0@dev"
     },
     "suggest": {
         "doctrine/mongodb-odm": "Required when use doctrine odm",
