--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "symfony/monolog-bundle": "^2.8",
         "sensio/distribution-bundle": "^5.0",
         "sensio/framework-extra-bundle": "^3.0.2",
+        "symfony/assetic-bundle": "^2.8",
         "mopa/bootstrap-bundle": "~3.0",
         "twbs/bootstrap": "~3.3.0",
         "knplabs/knp-paginator-bundle": "^2.5@dev",
