remove composer prefering source in travis config

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ matrix:
     fast_finish: true
 
 install:
-    - composer --prefer-source install;
+    - composer install;
 
 script:
     - phpunit
