--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,25 @@
 language: php
 
+php:
+  - 5.6
+  - 7.0
+  - hhvm
+
 matrix:
-    include:
-        - php: hhvm
-        - php: 5.6
-        - php: 7.0
-    fast_finish: true
+  fast_finish: true
+  include:
+    - php: 5.6
+  allow_failures:
+    - php: 7.0
+    - php: hhvm
 
 services: mongodb
 
-sudo: false
-
 before_script:
+    - if [[ $TRAVIS_PHP_VERSION != hhvm ]]; then phpenv config-rm xdebug.ini; fi;
+    - echo "extension = mongo.so" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
     - composer self-update
-    - composer install
+    - composer update --prefer-dist
 
 script:
     - phpunit
