--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,6 @@ language: php
 php:
   - 5.6
   - 7.0
-  - hhvm
 
 matrix:
   fast_finish: true
@@ -11,15 +10,14 @@ matrix:
     - php: 5.6
   allow_failures:
     - php: 7.0
-    - php: hhvm
 
 services: mongodb
 
 before_script:
-    - if [[ $TRAVIS_PHP_VERSION != hhvm ]]; then phpenv config-rm xdebug.ini; fi;
+    - phpenv config-rm xdebug.ini
     - echo "extension = mongo.so" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
     - composer self-update
-    - composer install --prefer-dist
+    - composer install -o
 
 script:
     - phpunit
